--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /CreditCardRecruit.Api/CreditCardRecruit.Api.Tests.Integration/obj
 /CreditCardRecruit.Api/CreditCardRecruit.Api.Tests.Unit/obj
 /CreditCardRecruit.Api/CreditCardRecruit.Api/bin/Debug/net5.0
+/CreditCardRecruit.Api/.vs
