--- a/CreditCardRecruit.Api/CreditCardRecruit.Api.Tests.Unit/CreditCardRecruit.Api.Tests.Unit.csproj
+++ b/CreditCardRecruit.Api/CreditCardRecruit.Api.Tests.Unit/CreditCardRecruit.Api.Tests.Unit.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CreditCardRecruit.Api\CreditCardRecruit.Api.csproj" />
+  </ItemGroup>
+
 </Project>
